# MLP

./: DataParse.h  MLP.cc  MLPmnist.cc  MLPmnistOOP.cc  MLPmnistOOPGraph.cc  MatrixNN.cc  Neuron.h  README.md  letterc.cc  main.cc  test.cc  text.txt
src/: CMakeLists.txt  MLP-1.0.texi  Makefile  bonus.md  main.cc  mlp_matrix_2l-10e.csv
src/Bonus/: MLPmnistOOP.h  MLPmnistOOPGraph.h  bonus.cc  bonus_weight_2_5.csv
src/Controller/: Controller.h
src/Model/: DataParse.cc  DataParse.h  GraphNN.cc  GraphNN.h  MatrixNN.cc  MatrixNN.h  Model.cc  Model.h  Neuron.h
src/Testing/: test_data.csv  tests.cc
src/View/: Paintscene.cc  Paintscene.h  View.cc  View.h  View.ui
src/doxygen/: Doxyfile
